--- a/package.json
+++ b/package.json
@@ -42,8 +42,14 @@
     "openai": "^4.52.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.2.1",
+    "react-github-readme-button": "^1.2.3",
+    "react-github-readme-md": "^1.2.2",
+    "react-github-repo-card": "^0.0.1-beta.1",
+    "react-github-repos": "^0.4.3",
     "react-intersection-observer": "^9.10.3",
     "react-markdown": "^8.0.7",
+    "react-repo-card": "^2.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
     "remark-gfm": "^3.0.1",
